Refactor to use storage system, and get cooking working with the test recipe!